--- a/templates/kitchen-main.html
+++ b/templates/kitchen-main.html
@@ -87,7 +87,10 @@
       </div>
       <div class="b-header__right__bottom">
         <!--main nav-->
-        <ul class="b-mainNav eight ninths skip-one">
+        <ul class="b-mainNav">
+          <li class="mobile-only">
+            <a class="b-mainNav__mobile_trigger" href="#"></a>
+          </li>
           <!--don't close li tags-->
           <li class="b-mainNav__unit">
             <a href="#">Кухни</a><!--don't close li tags-->
