--- a/templates/kitchen-inner.html
+++ b/templates/kitchen-inner.html
@@ -87,7 +87,10 @@
       </div>
       <div class="b-header__right__bottom">
         <!--main nav-->
-        <ul class="b-mainNav eight ninths">
+        <ul class="b-mainNav">
+          <li class="mobile-only">
+            <a class="b-mainNav__mobile_trigger" href="#"></a>
+          </li>
           <!--don't close li tags-->
           <li class="b-mainNav__unit">
             <a href="#">Кухни</a><!--don't close li tags-->
@@ -125,7 +128,7 @@
   </header>
   <!--big image-->
   <figure class="b-page__figure--innerPage">
-    <div class="container">
+    <div class="b-page__figure__content">
       <!--breadcrumbs-->
       <nav class="b-crumbs">
         <a href="#" class="b-crumbs__unit">Хлебные</a>
@@ -144,7 +147,7 @@
   <div class="b-template--indexPage container">
 
 
-    <article class="small-tablet__paddings" style="margin-bottom: 300px;">
+    <article class="small-tablet__paddings">
       <h2 class="obj-title">О компании</h2>
       <p>
         Ведь у нас вы можете заказать кухни
